seccion de perfil hecha

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./pages/crud.html">
                             <button>Reportes</button>
                         </a>
                     </li>
@@ -47,7 +47,7 @@
                     <img src="./assets/img/menu-icon.svg" alt="" width="20px" />
                 </button>
 
-                <div class="flex align-center account-btns">
+                <div class="flex align-center account-btns" id="account">
                     <a href="./pages/login.html">
                         <button class="btn-selected">Login</button>
                     </a>
@@ -67,9 +67,8 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                   
                 </p>
-                
+
                 <a href="#">
                     <button class="btn">Conócenos más ></button>
                 </a>
@@ -103,12 +102,12 @@
                 </p>
                 <h2 class="center">Integrantes:</h2>
                 <p class="center">
-                    Juan Ospina<br>
-                    Angel Urriola<br>
-                    Isaias Rodriguez<br>
-                    Cecilia Gonzales<br>
-                    Alessandra Canales<br>
-                    Angelis Linares<br>
+                    Juan Ospina<br />
+                    Angel Urriola<br />
+                    Isaias Rodriguez<br />
+                    Cecilia Gonzales<br />
+                    Alessandra Canales<br />
+                    Angelis Linares<br />
                     Alessandro Marconi
                 </p>
             </div>
@@ -207,5 +206,7 @@
         <footer>
             <h5 class="center">Todos los derechos reservados</h5>
         </footer>
+
+        <script src="./js/index.js"></script>
     </body>
 </html>
