--- a/frontend/pages/crud.html
+++ b/frontend/pages/crud.html
@@ -20,11 +20,8 @@
                 </button>
 
                 <div class="flex align-center account-btns">
-                    <a href="#">
-                        <button class="btn-selected">Login</button>
-                    </a>
-                    <a href="#">
-                        <button class="btn-selected">Register</button>
+                    <a href="../index.html">
+                        <button class="btn-selected">Home</button>
                     </a>
                 </div>
             </nav>
