--- a/frontend/pages/crud.html
+++ b/frontend/pages/crud.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../assets/styles.css" />
+        <script src="https://cdn.tailwindcss.com"></script>
         <title>CRUD</title>
     </head>
     <body>
@@ -29,8 +30,23 @@
         <hr />
 
         <section class="crud">
-            <h1>Consultas</h1>
-            <a href="#" class="boton">Añadir nueva consulta</a>
+            <h1 class="text-5xl ml-10">CRUD</h1>
+
+            <form action="" id="form-consultas" class="flex flex-column">
+                <label class="mt-7 ml-14 text-lg" for="">Nombre</label>
+                <input type="text" id="name" name="name" class="absoulte ml-14 w-80 border-2 border-black"/>
+
+                <label class="mt-7 ml-14 text-lg" for="">Nombre(Mascota)</label>
+                <input type="text" id="pet-name" name="pet-name" class="absolute mt-36 ml-14 w-80 border-2 border-black"/>
+
+                <label class=" absolute right-96 mt-7 text-lg" for="">Fecha de Consulta</label>
+                <input type="date" id="date" name="date" class="absolute right-96 w-80 mt-14 border-2 border-black"/>
+
+                <label class="absolute right-96 mt-28 text-lg" for="">Motivo</label>
+                <input type="text" id="reason" name="reason" class="absolute right-96 w-80 mt-36 border-2 border-black"/>
+            </form> 
+
+            <h1 id="Consulta">Consultas</h1>
             <table class="contenido">
                 <thead>
                     <tr>
