endpoint put hecho

--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -49,22 +49,16 @@
             <div class="container-edit-date">
                 <h2 id="edit-info">Editar Información</h2>
                 <form class="dates-f">
-                    <label for="Telefono">Teléfono</label>
-                    <input type="tel" id="Telefono" name="Telefono" />
-                    <br />
-                    <label for="Generos">Género</label>
-                    <input list="Genero" name="Genero" id="Generos" />
-                    <datalist id="Genero">
-                        <option value="F"></option>
-                        <option value="M"></option>
-                    </datalist>
+                    <label for="Telefono">Nombre</label>
+                    <input type="tel" id="Telefono" name="nombre" />
 
-                    <br />
-                    <label for="F_Nacimiento">Fecha de nacimiento:</label>
-                    <input type="date" id="F_Nacimiento" name="F_Nacimiento" />
+                    <label for="Generos">Correo</label>
+                    <input type="text" name="Genero" id="genero" />
+
+                    <label for="F_Nacimiento">Direccion: </label>
+                    <input type="text" id="direccion" name="F_Nacimiento" />
+                    <button class="btn-selected form-btn">Guardar Cambios</button>
                 </form>
-                <button class="btn-selected form-btn">Eliminar cuenta</button>
-                <button class="btn-selected form-btn">Guardar Cambios</button>
             </div>
         </div>
         <!-- FOOTER -->
