--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -48,12 +48,12 @@
             <div class="container-dates" id="datos"></div>
             <div class="container-edit-date">
                 <h2 id="edit-info">Editar Información</h2>
-                <form class="dates-f">
+                <form class="dates-f" id="form">
                     <label for="Telefono">Nombre</label>
-                    <input type="tel" id="Telefono" name="nombre" />
+                    <input type="tel" id="nombre" name="nombre" />
 
                     <label for="Generos">Correo</label>
-                    <input type="text" name="Genero" id="genero" />
+                    <input type="text" name="Genero" id="correo" />
 
                     <label for="F_Nacimiento">Direccion: </label>
                     <input type="text" id="direccion" name="F_Nacimiento" />
