--- a/frontend/pages/crud.html
+++ b/frontend/pages/crud.html
@@ -41,55 +41,11 @@
                         <td>Acciones</td>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>Juan</td>
-                        <td>Mascota1</td>
-                        <td>9/10/2022</td>
-                        <td>Vacunación</td>
-                        <td>
-                            <button type="button" class="action-btn">
-                                <img class="img-100" src="../assets/img/edit.png" />
-                            </button>
-                            <button type="button" class="action-btn">
-                                <img class="img-100" src="../assets/img/delete.png" />
-                            </button>
-                        </td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <td>Juan</td>
-                        <td>Mascota2</td>
-                        <td>9/10/2022</td>
-                        <td>Vacunación</td>
-                        <td>
-                            <button type="button" class="action-btn">
-                                <img class="img-100" src="../assets/img/edit.png" />
-                            </button>
-                            <button type="button" class="action-btn">
-                                <img class="img-100" src="../assets/img/delete.png" />
-                            </button>
-                        </td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <td>Juan</td>
-                        <td>Mascota3</td>
-                        <td>9/10/2022</td>
-                        <td>Vacunación</td>
-                        <td>
-                            <button type="button" class="action-btn">
-                                <img class="img-100" src="../assets/img/edit.png" />
-                            </button>
-                            <button type="button" class="action-btn">
-                                <img class="img-100" src="../assets/img/delete.png" />
-                            </button>
-                        </td>
-                    </tr>
+                <tbody id="T-Body">
+
                 </tbody>
             </table>
         </section>
+        <script src="../js/crud.js"></script>
     </body>
 </html>
