--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,8 +32,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <button>Ranking</button>
+                        <a href="./pages/sectionraza.html">
+                            <button>Razas</button>
                         </a>
                     </li>
                     <li>
