--- a/frontend/pages/crud.html
+++ b/frontend/pages/crud.html
@@ -31,6 +31,9 @@
 
         <section class="crud">
             <h1 id="Consulta">Consultas</h1>
+            <input type="text" style="border: 1px solid black" id="search-input" />
+            <button id="buscar">Buscar</button>
+            <button id="mostrar">Mostrar todas</button>
             <table class="contenido">
                 <thead>
                     <tr>
@@ -41,9 +44,7 @@
                         <td>Acciones</td>
                     </tr>
                 </thead>
-                <tbody id="T-Body">
-
-                </tbody>
+                <tbody id="T-Body"></tbody>
             </table>
         </section>
         <script src="../js/crud.js"></script>
